--- a/package.json
+++ b/package.json
@@ -16,9 +16,11 @@
     "@mui/lab": "^6.0.0-beta.22",
     "@mui/material": "^6.3.1",
     "axios": "^1.7.9",
+    "chart.js": "^4.4.7",
     "framer-motion": "^11.16.1",
     "motion": "^11.16.1",
     "react": "^18.3.1",
+    "react-chartjs-2": "^5.3.0",
     "react-dom": "^18.3.1",
     "react-router-dom": "^7.1.1"
   },
